{
  "version": 4,
  "terraform_version": "1.16.2",
  "serial": 18,
  "lineage": "77240eb4-bff5-38ad-3419-a331d9550a4e",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-00df5fa2bef88e251",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:579138738751:subnet/subnet-00df5fa2bef88e251",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 4090,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00df5fa2bef88e251",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "579138738751",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0c241509159132524"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-01c70bb1575c44cb0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:579138738751:subnet/subnet-01c70bb1575c44cb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "available_ip_address_count": 4087,
            "cidr_block": "172.31.64.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c70bb1575c44cb0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "579138738751",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0c241509159132524"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-05defbfbcbbf25e7d",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:579138738751:subnet/subnet-05defbfbcbbf25e7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.80.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05defbfbcbbf25e7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "579138738751",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0c241509159132524"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-078d52bfe579c74f2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:579138738751:subnet/subnet-078d52bfe579c74f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 4077,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078d52bfe579c74f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "579138738751",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0c241509159132524"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-0937ebb78ba697604",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:579138738751:subnet/subnet-0937ebb78ba697604",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.48.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0937ebb78ba697604",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "579138738751",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0c241509159132524"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-0c6bba0e768ce1f0d",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:579138738751:subnet/subnet-0c6bba0e768ce1f0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 4090,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6bba0e768ce1f0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "579138738751",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0c241509159132524"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:579138738751:vpc/vpc-0c241509159132524",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0aa7cb7e911ae7b1c",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-09777b035a35d98fd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c241509159132524",
            "instance_tenancy": "default",
            "owner_id": "579138738751"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "twenty_crm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b6d9d3d33ba97d99",
            "arn": "arn:aws:ec2:us-east-1:579138738751:instance/i-03d237066b2e58500",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03d237066b2e58500",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "twenty-crm-task15-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d645f292b5ac175d",
            "private_dns": "ip-172-31-3-186.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.3.186",
            "public_dns": "ec2-100-31-134-64.compute-1.amazonaws.com",
            "public_ip": "100.31.134.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-061eaa615f58bd5cf",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "twenty-crm-task15-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-078d52bfe579c74f2",
            "tags": {
              "Name": "twenty-crm-task15-instance"
            },
            "tags_all": {
              "Name": "twenty-crm-task15-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0033afc97d7bfc77f"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "data.aws_subnet.default",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "twenty_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:579138738751:loadbalancer/app/twenty-crm-task15-alb/0282a6fc6504daef",
            "arn_suffix": "app/twenty-crm-task15-alb/0282a6fc6504daef",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "twenty-crm-task15-alb-1646112780.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:579138738751:loadbalancer/app/twenty-crm-task15-alb/0282a6fc6504daef",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "twenty-crm-task15-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a96fb2fab654fd4b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00df5fa2bef88e251"
              },
              {
                "subnet_id": "subnet-01c70bb1575c44cb0"
              },
              {
                "subnet_id": "subnet-05defbfbcbbf25e7d"
              },
              {
                "subnet_id": "subnet-078d52bfe579c74f2"
              },
              {
                "subnet_id": "subnet-0937ebb78ba697604"
              },
              {
                "subnet_id": "subnet-0c6bba0e768ce1f0d"
              }
            ],
            "subnets": [
              "subnet-00df5fa2bef88e251",
              "subnet-01c70bb1575c44cb0",
              "subnet-05defbfbcbbf25e7d",
              "subnet-078d52bfe579c74f2",
              "subnet-0937ebb78ba697604",
              "subnet-0c6bba0e768ce1f0d"
            ],
            "tags": {
              "Name": "twenty-crm-task15-alb"
            },
            "tags_all": {
              "Name": "twenty-crm-task15-alb"
            },
            "vpc_id": "vpc-0c241509159132524",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_subnet.default",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "twenty_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:579138738751:targetgroup/twenty-crm-task15-tg/614746a9244c7378",
            "arn_suffix": "targetgroup/twenty-crm-task15-tg/614746a9244c7378",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:579138738751:targetgroup/twenty-crm-task15-tg/614746a9244c7378",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "twenty-crm-task15-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "twenty-crm-task15-tg"
            },
            "tags_all": {
              "Name": "twenty-crm-task15-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c241509159132524"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "twenty_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:579138738751:targetgroup/twenty-crm-task15-tg/614746a9244c7378-20260915074708389600000002",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:579138738751:targetgroup/twenty-crm-task15-tg/614746a9244c7378",
            "target_id": "i-03d237066b2e58500"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.twenty_crm",
            "aws_lb_target_group.twenty_tg",
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "data.aws_subnet.default",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:579138738751:security-group/sg-0a96fb2fab654fd4b",
            "description": "Allow inbound HTTP from the internet to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a96fb2fab654fd4b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "twenty-crm-task15-alb-sg",
            "name_prefix": "",
            "owner_id": "579138738751",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "twenty-crm-task15-alb-sg"
            },
            "tags_all": {
              "Name": "twenty-crm-task15-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c241509159132524"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:579138738751:security-group/sg-0033afc97d7bfc77f",
            "description": "Allow Twenty CRM traffic only from the ALB, plus SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound (docker pulls, package installs)",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0033afc97d7bfc77f",
            "ingress": [
              {
                "cidr_blocks": [
                  "152.56.142.191/32"
                ],
                "description": "SSH for troubleshooting",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Twenty CRM app port from ALB only",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a96fb2fab654fd4b"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "twenty-crm-task15-ec2-sg",
            "name_prefix": "",
            "owner_id": "579138738751",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "twenty-crm-task15-ec2-sg"
            },
            "tags_all": {
              "Name": "twenty-crm-task15-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c241509159132524"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}